--- a/templates/index.html
+++ b/templates/index.html
@@ -24,13 +24,74 @@
 	<style>
 		html,
 		body {
+			backdrop-filter: blur(10px);
+			background-image: url("/static/images/DSC02332_1.jpg");
+			/* Full height */
+			height: 100%;
+			/* Center and scale the image nicely */
+			background-repeat: no-repeat;
+			background-size: cover;
 			min-height: 100%;
 			height: 100vh;
+			background-attachment: fixed;
 		}
 
 		.featherlight .featherlight-content {
     		overflow: unset;
 		}
+
+		.nav-wrapper {
+			top: 0px;
+			left: 0px;
+		}
+
+		.navigation {
+			box-shadow: unset;
+		}
+
+		.nav-toogler::before,
+		.nav-toogler::after {
+			content: '';
+			position: relative;
+			display: block;
+			width: 30px;
+			height: 3px;
+			background-color: rgb(147, 163, 221);
+			transition: .4s cubic-bezier(.77, 0, .18, 1);
+		}
+
+		.nav-wrapper.active .nav-toogler::before,
+		.nav-wrapper.active .nav-toogler::after {
+			position: absolute;
+			top: 50%;
+			background-color: rgb(147, 163, 221);
+			transform: rotate(135deg);
+		}
+
+		.nav-wrapper.active .nav-toogler::after {
+			transform: rotate(-135deg);
+			background-color: rgb(147, 163, 221);
+			margin-top: 0;
+		}
+
+		.longBtns {
+			display: block;
+			color:  rgb(164, 178, 224);
+			border: 2px solid rgb(164, 178, 224);
+		}
+
+		.longBtns:hover {
+			display: block;
+			color: white;
+			background-color: rgb(164, 178, 224);
+			border: 2px solid rgb(164, 178, 224);
+			overflow-wrap: break-word;
+		}
+
+		.featherlight .featherlight-close-icon {
+			color: rgb(164, 178, 224);
+		}
+
 	</style>
 
 </head>
@@ -56,6 +117,17 @@
 				</nav>
 			</div>
 
+			<!-- Popups -->
+			<div class="menu popUpQuestion1 hidden">
+				<a href="#" class="button longBtns call-sister">Call Sister Anne</a>
+				<a href="#" class="button longBtns call-mommy">Call Mommy</a>
+			</div>
+			
+			<div class="menu popUpQuestion2 hidden">
+				<a href="#" class="button longBtns send-text">Send message to Blaire</a>
+				<a href="#" class="button longBtns go-drive">Go drive to her home</a>
+			</div>
+
 			<video id="video-content" autoplay="false">
 				<source src="/media/videos/demo02.mp4" type="video/mp4">
 				Your browser does not support the video tag.
@@ -68,17 +140,6 @@
 			<div class="screen-resize">
 				<span class="ti-fullscreen"></span>
 				<!-- <span class="ti-control-play vcontrol"></span> -->
-			</div>
-
-			<!-- Popups -->
-			<div class="lightbox popUpQuestion1">
-				<a href="#" class="button longBtns call-sister">Call Sister Anne</a>
-				<a href="#" class="button longBtns call-mommy">Call Mommy</a>
-			</div>
-
-			<div class="lightbox popUpQuestion2">
-				<a href="#" class="button longBtns send-text">Send message to Blaire</a>
-				<a href="#" class="button longBtns go-drive">Go drive to her home</a>
 			</div>
 
 		</div>
